@@ -65,3 +65,4 @@ emergencyTimer = "Emergency break due to extensive run time!"
 emergencyMemory = "Emergency break due to extensive memory usage!"
 fileserviceDelete = "Unable to delete file: "
 chunkserviceAccess = "Could not access chunk file: "
+simpleArray = "Simplified array analysis due to more then 100 items."
