@@ -21,6 +21,8 @@
   analysis
 - Bugfix: Made use of the language file (nearly) everywhere.
 - Bugfix: Make sure that there are no leftover chunks after a run.
+- Bugfix: Prevent large output in case of arrays with more than 100
+  items.
 
 2.2.0
 - Added more search pattern and source code parsing to the
